--- a/ts_notebook.ipynb
+++ b/ts_notebook.ipynb
@@ -1237,7 +1237,7 @@
     "#Calculate historical mean value\n",
     "df_avg['mean'] = df_avg.loc[:,'1996-04':'2018-04'].mean(skipna=True, axis=1)\n",
     "\n",
-    "#Calculate coefficient of varianciation\n",
+    "#Calculate coefficient of variation\n",
     "df_avg['CV'] = df_avg['std']/df_avg['mean']\n",
     "\n",
     "#Show calculated values\n",
